Donde dice 'apodo' pongo 'nickname'
